# dvc-code

./: .gitignore  README.md  pyproject.toml
.dvc/: config
data/: data.xml.dvc
src/: ingest.py
