[tool.poetry]
name = "dvc-code"
version = "0.1.0"
description = ""
authors = ["Jens X Augustsson <jens@augustsson.eu>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
dvc = "^2.0.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
